--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [project]
-name = "flecs-py"
+name = "pyflecs"
 version = "0.1.0"
-description = "Add your description here"
+description = "A python binding for flecs using ctypes"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ctypesgen>=1.1.1",
-    "ruff>=0.12.2",
+    "ruff>=0.12.4",
 ]
+
+[tool.setuptools.package-data]
+pyflecs = ["**/*.dylib"]
