--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A python binding for flecs using ctypes"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bidict>=0.23.1",
     "ctypesgen>=1.1.1",
     "ruff>=0.12.4",
 ]
